--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,16 @@ main {
     text-align: center;
 }
 
+button:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+button:disabled {
+    cursor: default;
+    opacity: 1;
+}
+
 p,
 img,
 button,
@@ -110,8 +120,4 @@ button {
     display: inline-block;
     text-align: center;
     margin: 0 auto;
-}
-
-button:hover {
-    cursor: pointer;
 }
